--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
 	"scripts": {
 		"dev": "vite",
 		"build": "tsc && vite build",
-		"preview": "vite preview"
+		"preview": "vite preview",
+		"deploy": "gh-pages -d dist"
 	},
+	"homepage": "https://revo-market.github.io/revo-withdrawal-dapp/",
 	"dependencies": {
 		"@tanstack/react-query": "^5.29.0",
 		"@web3modal/wagmi": "^4.1.6",
@@ -21,6 +23,7 @@
 		"@types/react-dom": "^18.0.11",
 		"@vitejs/plugin-react": "^4.0.0",
 		"autoprefixer": "^10.4.19",
+		"gh-pages": "^6.1.1",
 		"postcss": "^8.4.38",
 		"tailwindcss": "^3.4.3",
 		"typescript": "^5.0.4",
